k8s/apps/home-assistant/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: "home-assistant"
  namespace: "home-assistant"
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: "home-assistant"
  namespace: "home-assistant"
subsets:
  - addresses:
      - ip: "100.102.81.97"
    ports:
      - name: http
        port: 8123
        protocol: TCP
